Clean up CMake for default compilers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ option (LEMMA_VTK8_SUPPORT "VTK 8.x library for visualisation and grids" OFF)
 #option (CMAKE_CROSSCOMPILING "Target different arch than you are on" OFF)
 
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMake/ )
-message( STATUS "MODULE PATH ${CMAKE_MODULE_PATH}" )
+#message( STATUS "MODULE PATH ${CMAKE_MODULE_PATH}" )
 
 SET (CMAKE_CROSSCOMPILING TRUE)
 
