--- a/Modules/TEM1D/src/CMakeLists.txt
+++ b/Modules/TEM1D/src/CMakeLists.txt
@@ -1,50 +1,9 @@
 set (TEM1DSOURCE
+
 	${TEM1DSOURCE}
 
-
 	${CMAKE_CURRENT_SOURCE_DIR}/TEMReceiver.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEMReader.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/TEMTransmitter.cpp
 	
-	# Calculation points
-#	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
-
-	# Sources	
-#	${CMAKE_CURRENT_SOURCE_DIR}/CompactSupportEMSource.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/CircularLoop.cpp
-
-#	${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/WireAntenna.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/PolygonalWireAntenna.cpp
-
-	# Kernel management	
-#	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DSpec.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DReflSpec.cpp
-
-	#####################
-	# Hankel transforms #
-	#####################
-	# FHT
-#	${CMAKE_CURRENT_SOURCE_DIR}/HankelTransform.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/FHTAnderson801.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey201.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
-
-	# Templated FHT
-#	${CMAKE_CURRENT_SOURCE_DIR}/FHT.cpp
-
-	# Gaussian Quadrature
-#	${CMAKE_CURRENT_SOURCE_DIR}/GQChave.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/QWEKey.cpp
-	
-	# Calculation
-#	${CMAKE_CURRENT_SOURCE_DIR}/EMEarth1D.cpp
-
-	# AEM 
-#	${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
-	
-	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
 )
