--- a/Documentation/Doxyfile.in
+++ b/Documentation/Doxyfile.in
@@ -858,7 +858,7 @@ EXCLUDE_SYMBOLS        =
 # that contain example code fragments that are included (see the \include
 # command).
 
-EXAMPLE_PATH           = ./unittest \
+EXAMPLE_PATH           = ./Modules/examples/ \
                          ./
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
@@ -2178,7 +2178,7 @@ DOT_NUM_THREADS        = 0
 # The default value is: Helvetica.
 # This tag requires that the tag HAVE_DOT is set to YES.
 
-DOT_FONTNAME           = FreeSans
+DOT_FONTNAME           = Helvetica 
 
 # The DOT_FONTSIZE tag can be used to set the size (in points) of the font of
 # dot graphs.
