More TEM 1D progress

--- a/Modules/TEM1D/src/CMakeLists.txt
+++ b/Modules/TEM1D/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set (TEM1DSOURCE
 	${TEM1DSOURCE}
 
 	${CMAKE_CURRENT_SOURCE_DIR}/TEMReceiver.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/TEMInductiveReceiver.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/TEMTransmitter.cpp
 	
 	PARENT_SCOPE
