Fix on MacOS which does not default to CXX-11

--- a/Modules/DCIP/CMakeLists.txt
+++ b/Modules/DCIP/CMakeLists.txt
@@ -21,8 +21,8 @@ install ( FILES  ${PROJECT_BINARY_DIR}/include/EMSchur3DConfig.h   DESTINATION $
 		VERSION  "${DCIP_VERSION_NOQUOTES}"
 		SOVERSION "${DCIP_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}"
 		PROJECT_LABEL "DCIP ${LABEL_SUFFIX}"
-    	CXX_STANDARD_14
-    	CXX_STANDARD_REQUIRED_ON
+    	CXX_STANDARD 14
+    	CXX_STANDARD_REQUIRED ON
 	)
 
 	# Linking
