--- a/Modules/LemmaCore/testing/CMakeLists.txt
+++ b/Modules/LemmaCore/testing/CMakeLists.txt
@@ -13,3 +13,10 @@ target_link_libraries(unittest_LemmaCore_SerializeCheck "lemmacore")
 CXXTEST_ADD_TEST(unittest_LemmaCore_CopyDisableCheck CopyDisableCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/CopyDisableCheck.h)
 target_link_libraries(unittest_LemmaCore_CopyDisableCheck "lemmacore")
  
+set_target_properties( unittest_LemmaCore_GetNameCheck 
+	               unittest_LemmaCore_SerializeCheck
+		       unittest_LemmaCore_CopyDisableCheck
+	PROPERTIES
+	CXX_STANDARD 14 
+	CXX_STANDARD_REQUIRED ON
+	)
