--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,6 +305,26 @@ endif()
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 if (LEMMA_USE_OPENMP)
+
+    if(APPLE)
+        if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+            set(OpenMP_C "${CMAKE_C_COMPILER}")
+            set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+            set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
+            set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+            set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+            set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
+        endif()
+        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+            set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+            set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+            set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
+            set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+            set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+            set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+        endif()
+    endif()
+
     if (CMAKE_CROSSCOMPILING)
         set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
         set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
