--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,24 +306,25 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 if (LEMMA_USE_OPENMP)
 
-    if(APPLE)
-        if(CMAKE_C_COMPILER_ID MATCHES "Clang")
-            set(OpenMP_C "${CMAKE_C_COMPILER}")
-            set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
-            set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
-            set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
-            set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
-            set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
-        endif()
-        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-            set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-            set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
-            set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
-            set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
-            set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
-            set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
-        endif()
-    endif()
+            #    if(APPLE)
+            #if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+            #set(OpenMP_C "${CMAKE_C_COMPILER}")
+            #set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+            #set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
+            #set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+            #set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+            #set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
+            #endif()
+            #        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+            #            set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+            #            set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include")
+            #" -DOpenMP_CXX_LIB_NAMES=\"omp\" -DOpenMP_omp_LIBRARY=/usr/local/opt/libomp/lib/libomp.dylib ")
+            #            set(OpenMP_CXX_LIB_NAMES "omp") # "libgomp" "libiomp5")
+            #            set(OpenMP_libomp_LIBRARY "/usr/local/opt/libomp/lib/libomp.dylib") #${OpenMP_CXX_LIB_NAMES})
+            #set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+            #set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+            #        endif()
+            #    endif()
 
     if (CMAKE_CROSSCOMPILING)
         set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
