Timing and comparison work.

--- a/Modules/FDEM1D/examples/CMakeLists.txt
+++ b/Modules/FDEM1D/examples/CMakeLists.txt
@@ -26,6 +26,10 @@ add_executable( Hantenna Hantenna.cpp  )
 target_link_libraries(  Hantenna  "lemmacore" "fdem1d")
 set_property(TARGET Hantenna PROPERTY CXX_STANDARD 14)
 
+add_executable( Eantenna Eantenna.cpp  )
+target_link_libraries(  Eantenna  "lemmacore" "fdem1d")
+set_property(TARGET Eantenna PROPERTY CXX_STANDARD 14)
+
 add_executable( DipoleSource DipoleSource.cpp  )
 target_link_libraries(  DipoleSource  "lemmacore" "fdem1d")
 set_property(TARGET DipoleSource PROPERTY CXX_STANDARD 14)
@@ -37,6 +41,7 @@ INSTALL_TARGETS( "/share/FDEM1D/"
 	EMDipEarth1D
     CircularLoop
 	Hantenna
+	Eantenna
 	DipoleSource
 )
 
